export enum Trafico {
    FLUIDO,
    DENSO,
    CONGESTIONADO,
    CORTADO,
    SIN_DATOS,
    PASO_INFERIOR_FLUIDO,
    PASO_INFERIOR_DENSO,
    PASO_INFERIOR_CONGESTIONADO,
    PASO_INFERIOR_CORTADO
}